--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@vueuse/core": "^9.3.0",
     "@vueuse/nuxt": "^9.3.0",
     "nuxt": "3.0.0-rc.10"
+  },
+  "dependencies": {
+    "vuedraggable": "^4.1.0"
   }
 }
